[project]
name = "bluetooth-auto-recovery"
version = "1.6.4"
description = "Recover bluetooth adapters that are in an stuck state"
authors = [{ name = "J. Nick Koston", email = "nick@koston.org" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["classifiers", "dependencies"]

[project.urls]
"Repository" = "https://github.com/bluetooth-devices/bluetooth-auto-recovery"
"Documentation" = "https://bluetooth-auto-recovery.readthedocs.io"
"Bug Tracker" = "https://github.com/bluetooth-devices/bluetooth-auto-recovery/issues"
"Changelog" = "https://github.com/bluetooth-devices/bluetooth-auto-recovery/blob/main/CHANGELOG.md"


[tool.poetry]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
packages = [
    { include = "bluetooth_auto_recovery", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.15"

# Documentation Dependencies
Sphinx = {version = ">=5,<8", optional = true}
sphinx-rtd-theme = {version = ">=3.1.0,<4", optional = true}
myst-parser = {version = ">=4.0.1,<4.1", optional = true}
PyRIC = ">=0.1.6.3"
btsocket = ">=0.2.0"
async-timeout = {version = ">=5.0.1", python = "<3.11"}
usb-devices = ">=0.4.1"
bluetooth-adapters = ">=2.4.0"

[tool.poetry.extras]
docs = [
    "myst-parser",
    "sphinx",
    "sphinx-rtd-theme",
]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0"
pytest-asyncio = ">=0.23.5"
pytest-cov = "^7.1"

[tool.semantic_release]
branch = "main"
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/bluetooth_auto_recovery/__init__.py:__version__"]
build_command = "pip install poetry && poetry build"

[tool.pytest.ini_options]
addopts = "-v -Wdefault --cov=bluetooth_auto_recovery --cov-report=term-missing:skip-covered"
pythonpath = ["src"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@overload",
    "if TYPE_CHECKING",
    "raise NotImplementedError",
]

[tool.ruff]
required-version = ">=0.5.0"
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "A", "ANN", "ARG", "ASYNC", "B", "BLE", "C4", "C90", "D", "DTZ",
    "E", "EM", "ERA", "EXE", "F", "FA", "FIX", "FLY", "FURB", "G", "I",
    "ICN", "INP", "ISC", "LOG", "N", "NPY", "PERF", "PGH", "PIE", "PL",
    "PT", "PTH", "PYI", "Q", "UP", "RET", "RSE", "RUF", "S", "SIM",
    "SLF", "SLOT", "T10", "T20", "TC", "TD", "TID", "TRY", "W", "YTT"
]
ignore = [
    "ANN401", "D100", "D101", "D102", "D103", "D104", "D105",
    "D106", "D107", "D203", "D213", "E501"
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "ARG", "PLR2004", "S101", "S106", "SLF"]
"docs/**" = ["A001", "ERA001", "INP001"]
"examples/**" = ["INP001"]

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["bluetooth_auto_recovery", "tests"]
combine-as-imports = true
split-on-trailing-comma = false

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
mypy_path = "src/"
no_implicit_optional = true
show_error_codes = true
warn_unreachable = true
warn_unused_ignores = true
exclude = [
    'docs/.*',
    'setup.py',
]

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true

[[tool.mypy.overrides]]
module = "docs.*"
ignore_errors = true


[build-system]
requires = ["poetry-core>=2.1.0"]
build-backend = "poetry.core.masonry.api"
